# amatsukaze-client

./: LICENSE  README.md  pyproject.toml
.github/: flake8_error.json  flake8_warning.json
.github/workflows/: ci.yml
amatsukaze_client/command/: AmatsukazeCommunicator.py  amatsukaze_communicator.py
amatsukaze_client/component/: TcpConnection.py  amatsukaze_communicator.py  tcp_connection.py
amatsukaze_client/enum/: RPCMethodId.py
amatsukaze_client/enum/message/: audio_encoder_type.py  change_item_type.py  check_type.py  d3dvpgpu.py  deblock_strength.py  decoder_type.py  deinterlace_algorithm.py  drcs_update_type.py  encoder_type.py  filter_fps.py  filter_option.py  finish_action.py  format_type.py  genre_space.py  proc_mode.py  qtgmc_preset.py  queue_state.py  resource_phase.py  server_request.py  service_setting_update_type.py  state_change_event.py  update_type.py  video_size_condition.py
amatsukaze_client/enum/rpc/: message_type_id.py
amatsukaze_client/model/: AmatsukazeRPCMessage.py  AmatsukazeRPCMessageContainer.py
amatsukaze_client/model/message/: add_queue_item.py  add_queue_request.py  audio_diff.py  auto_select_condition.py  auto_select_profile.py  auto_select_update.py  bitrate_setting.py  change_item_data.py  check_log_data.py  check_log_item.py  common_data.py  console_data.py  console_update.py  disk_item.py  drcs_image.py  drcs_image_update.py  drcs_source_item.py  encode_state.py  error_count.py  filter_setting.py  finish_setting.py  genre_item.py  log_data.py  log_file.py  log_file_request.py  log_item.py  logo_data.py  logo_setting.py  (+19 more)
(+8 files in other folders)
